--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Typing Test</title>
-</head>
-<body>
-    <h1>Typing Test</h1>
+  </head>
+  <body>
+    <main>Typing Test</main>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
