Putting basic elements

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Typing Test</title>
   </head>
   <body>
-    <main>Typing Test</main>
+    <main>
+      <section>
+        <time>30</time>
+        <paragraph></paragraph>
+        <input type="text" autofocus />
+      </section>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
