Making initGame function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <section>
-        <time>30</time>
+        <time></time>
         <p></p>
         <input type="text" autofocus />
       </section>
