--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   </head>
   <body>
     <main>
-      <section>
+      <section id="game">
         <time></time>
         <p></p>
         <input type="text" autofocus />
       </section>
+      <section id="results"></section>
     </main>
     <script src="index.js"></script>
   </body>
