--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Typing Test</title>
+    <script src="index.js" type="module"></script>
   </head>
   <body>
     <main>
@@ -15,6 +16,5 @@
       </section>
       <section id="results"></section>
     </main>
-    <script src="index.js"></script>
   </body>
 </html>
