--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <p></p>
         <input type="text" autofocus />
       </section>
-      <section id="results"></section>
+      <section id="results">
+        <h2>WPM:</h2>
+        <h3 id="wpm"></h3>
+        <h2>Accuracy:</h2>
+        <h3 id="accuracy"></h3>
+      </section>
     </main>
   </body>
 </html>
