Getting button element by id

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3 id="wpm"></h3>
         <h2>Accuracy:</h2>
         <h3 id="accuracy"></h3>
-        <button>
+        <button id="reload-button">
           <svg
             width="24"
             height="24"
