Creating style button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <main>
+      <button id="start-button">START</button>
       <section id="game">
         <time></time>
         <p></p>
